# python-setting

./: pyproject.toml
python_setting/: __main__.py
