[tool.poetry]
name = "python-setting"
version = "0.1.0"
description = ""
authors = ["tmk <morimoto.ke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version="py39"
select = [
    "E",
    "F",
    "W",
    "I",
    "Q",
]
line-length = 119
[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.isort]
force-single-line = true